# wormhole-icco

./: .gitignore  .prettierignore  Makefile  Makefile.help  README.md  SECURITY.md  STUFF.txt  Tiltfile  WHITEPAPER.md  testnet.json
.github/workflows/: build.yml  codeql-analysis.yml  slither.yml
anchor-contributor/: Anchor.toml  Cargo.toml  README.md  aa  devnet.env  package.json  run_anchor_test.sh  test.env  tsconfig.json  unset.env
anchor-contributor/migrations/: create-devnet-custodian.ts  deploy-devnet.sh  utils.ts
anchor-contributor/programs/anchor-contributor/: Cargo.toml
anchor-contributor/programs/anchor-contributor/src/: constants.rs  context.rs  cryptography.rs  env.rs  error.rs  lib.rs  state.rs  state_old.rs  token_bridge.rs  wormhole.rs
anchor-contributor/programs/anchor-contributor/src/state/: buyer.rs  custodian.rs  mod.rs  sale.rs  token_custodian.rs
anchor-contributor/tests/: anchor-contributor.ts  lib.ts
anchor-contributor/tests/helpers/: accounts.ts  conductor.ts  consts.ts  contributor.ts  fetch.ts  kyc.ts  token-bridge.ts  utils.ts  wormhole.ts
deprecated/solana/: Dockerfile  Dockerfile.wasm
deprecated/solana/modules/icco_contributor/: README.md
design/: 0005_staking.md
devnet/: eth-devnet.yaml  solana-devnet.yaml
ethereum/: .env.template  .env.test  .gitignore  CONDUCTOR_ERROR_CODES.md  Makefile  README.md  conductor_devnet.json  deploy_contracts.sh  icco_deployment_config.js.sample  package-lock.json  package.json  truffle-config.js  wormhole-addresses.js
ethereum/contracts/icco/conductor/: Conductor.sol  ConductorGetters.sol  ConductorGovernance.sol  ConductorImplementation.sol  ConductorSetters.sol  ConductorSetup.sol  ConductorState.sol  ConductorStructs.sol  TokenSaleConductor.sol
ethereum/contracts/icco/contributor/: Contributor.sol  ContributorGetters.sol  ContributorGovernance.sol  ContributorImplementation.sol  ContributorSetters.sol  ContributorSetup.sol  ContributorState.sol  ContributorStructs.sol  TokenSaleContributor.sol
ethereum/contracts/icco/shared/: ErrorCodes.sol  ICCOStructs.sol
ethereum/contracts/interfaces/: ITokenBridge.sol  IWormhole.sol
ethereum/contracts/testing/token/: MaliciousSeller.sol  TokenERC777.sol
ethereum/migrations/: 10_deploy_icco_conductor.js  11_deploy_icco_contributor.js  2_deploy_icco_conductor.js  3_deploy_icco_contributor.js  4_deploy_erc777_token.js  5_deploy_malicious_seller.js
ethereum/scripts/: register_bsc_contributor.js  register_contributors.js  register_eth_contributor.js  register_tilt_contributors.js
ethereum/test/: icco.js
sdk/: .gitignore  package-lock.json  package.json  tsconfig.json
sdk/cfg/testnet/: contributors.json.sample  saleConfig.json.sample
sdk/js/: jestconfig.json  package-lock.json  package.json  tsconfig.json
sdk/js/src/: index.ts
sdk/js/src/icco/: abortSaleBeforeStartTime.ts  attestContributions.ts  claimAllocation.ts  claimRefund.ts  collectContribution.ts  contribute.ts  contributorContracts.ts  createSale.ts  getters.ts  index.ts  initSale.ts  misc.ts  registerChain.ts  saleAborted.ts  saleSealed.ts  sealSale.ts  signedVaa.ts  (+1 more)
sdk/scripts/: copy_anchor.sh  copy_ethereum.sh  copy_solana.sh
sdk/src/: utils.ts
sdk/src/evm/: conductor.ts
sdk/src/icco/: attestContributions.ts  claimExcessContribution.ts  claimRefund.ts  createSale.ts  getters.ts  index.ts  misc.ts  saleAborted.ts  saleAuthorityUpdated.ts  sealSale.ts  signedVaa.ts  structs.ts  updateSaleAuthority.ts
sdk/src/testnet/: anchor_contributor.ts  consts.ts  io.ts  kyc.ts  purse.ts  run_evm_sales.ts  run_solana_sales.ts  run_successful_sale.ts  run_testnet_sale.ts  solana.ts  solana_utils.ts  structs.ts  testCalculator.ts  utils.ts
sdk/src/tools/: README.md  register_testnet_contributors.ts  upgrade_testnet_contracts.ts
solana/: Dockerfile.wasm  README.md  b58-to-hex.js  devnet_setup.sh  icco_conribr_deploy.sh  read_conductor_address.js
solana-anchor/: Anchor.toml
solana-anchor/programs/contributor/: Cargo.toml
solana-anchor/programs/icco/: Cargo.toml
solana-anchor/programs/icco-contributor/: Cargo.toml
solana-anchor/programs/icco_contributor/: Cargo.toml
solana-anchor/programs/icco_contributor/src/: instructions.rs  lib.rs  wormhole.rs
solana-anchor/programs/icco_contributor/src/state/: config.rs
solana-anchor/tests/: icco.ts
solana/modules/icco_contributor/: .gitignore  Cargo.toml  Makefile  README.md  contributor_id.json  run_test_validator.sh
solana/modules/icco_contributor/program/: Cargo.toml
solana/modules/icco_contributor/program/src/: accounts.rs  api.rs  claimed_vaa.rs  errors.rs  instructions.rs  lib.rs  messages.rs  simple_account.rs  types.rs  wasm.rs
solana/modules/icco_contributor/program/src/api/: abort_sale.rs  attest_sale.rs  claim_allocation.rs  claim_refund.rs  contribute.rs  governance.rs  init_sale.rs  initialize.rs  seal_sale.rs
solana/modules/icco_contributor/program/tests/: common.rs
terra/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
terra/contracts/: README.md
terra/contracts/icco-contributor/: Cargo.toml
terra/contracts/icco-contributor/src/: contract.rs  error.rs  execute.rs  hooks.rs  lib.rs  msg.rs  query.rs  shared.rs  state.rs
terra/contracts/icco-contributor/src/testing/: mock_querier.rs  tests.rs
terra/scripts/: README.md  consts.ts  deploy.ts  helpers.ts  package-lock.json  package.json  tsconfig.json
terra/scripts/tests/: README.md  contributor.ts  lib.ts  tests.ts
terra/tools/: deploy.js
test/testnet/: .gitignore  package-lock.json  package.json  tsconfig.json
test/testnet/cfg/: wormholeAddresses.js
test/testnet/solana/: anchor_contributor.json
test/testnet/src/: consts.ts  kyc.ts  run_testnet_sale.ts  solana_utils.ts  structs.ts  utils.ts
tools/: README.md  package-lock.json  package.json  register_testnet_contributors.ts  register_tilt_contributors.ts  tsconfig.json
whitepapers/: 0007_icco.md
(+36 files in other folders)
