[package]
name = "anchor-contributor"
version = "0.1.0"
description = "ICCO Contributor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_contributor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
localhost = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version= "0.24.2", features = ["init-if-needed"]}
anchor-spl = "0.24.2"
spl-token = "3.3.0"
num-traits = "0.2"
num-derive = "0.3"
borsh = "0.9.3"
hex = "0.4.3"
num = "0.4"
itertools = "0.8"
libsecp256k1 = "0.7.0"
getrandom = { version = "0.2", features = ["custom"] }
sha3 = "0.10.1"
