[package]
name = "icco_contributor"
version = "0.1.0"
description = "ICCO Contributor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "icco_contributor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
num-traits = "0.2"
num-derive = "0.3"
