[package]
name = "icco_contributor"
version = "0.1.0"
description = "Created with Rocksalt"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "icco_contributor"

[features]
no-entrypoint = ["solitaire/no-entrypoint", "rand"]
trace = ["solitaire/trace"]
wasm = ["no-entrypoint", "wasm-bindgen"]
client = ["solitaire-client", "solitaire/client", "no-entrypoint"]
cpi = ["no-entrypoint"]
default = []

[dependencies]
wormhole-bridge-solana = { git = "https://github.com/certusone/wormhole", features = ["no-entrypoint", "cpi"] }
borsh = "=0.9.1"
bstr = "0.2.16"
byteorder = "1.4.3"
rocksalt = { git = "https://github.com/certusone/wormhole" }
solitaire = { git = "https://github.com/certusone/wormhole" }
sha3 = "0.9.1"
solana-program = { version="=1.9.4" }
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }
primitive-types = { version = "0.9.0", default-features = false }
solitaire-client = { git = "https://github.com/certusone/wormhole", optional = true }
spl-token-metadata = { git = "https://github.com/certusone/wormhole" }
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"], optional = true }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.7.3", optional = true }
wormhole-sdk = { git = "https://github.com/certusone/wormhole", features = ["devnet", "solana"] }

[dev-dependencies]
hex = "*"
hex-literal = "0.3.1"
libsecp256k1 = { version = "0.3.5", features = [] }
solana-client = "=1.9.4"
solana-sdk = "=1.9.4"
#spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }
#spl-token-metadata = { path = "../token-metadata" }
